--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -6,8 +6,6 @@ services:
     container_name: mongodb_container 
     ports:
       - "27017:27017" 
-    volumes:
-      - mongo_data:/data/db
     
   app:
     build: 
@@ -20,8 +18,4 @@ services:
     depends_on:
       - mongo
 
-    command: bash -c "npm i && npm run start"
-
-volumes:
-  mongo_data:
-    driver: local 
+    command: bash -c "npm i && npm run test"
