--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -25,11 +25,4 @@ jobs:
         run: sudo apt-get install docker-compose
 
       - name: Build and run Docker Compose
-        run: docker-compose up --build -d
-
-      - name: Run tests
-        run: docker-compose exec app npm run test
-
-      - name: Teardown
-        if: always()
-        run: docker-compose down
+        run: ddocker-compose -f docker-compose.test.yml up --abort-on-container-exit
