--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -25,4 +25,4 @@ jobs:
         run: sudo apt-get install docker-compose
 
       - name: Build and run Docker Compose
-        run: ddocker-compose -f docker-compose.test.yml up --abort-on-container-exit
+        run: docker-compose -f docker-compose.test.yml up --abort-on-container-exit
