--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -21,4 +21,4 @@ services:
     depends_on:
       - mongo
 
-    command: bash -c "npm i && npm run test"
+    command: bash -c "node -v && npm -v && npm i && npm run test"
