--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -22,7 +22,19 @@ jobs:
         uses: docker/setup-buildx-action@v2
 
       - name: Set up Docker Compose
-        run: sudo apt-get install docker-compose
+        uses: docker/setup-qemu-action@v2 # Adicione esta linha para configurar a emulação, necessária em alguns cenários
+        with:
+          platforms: all
 
-      - name: Build and run Docker Compose
+      - name: Install Docker Compose
+        run: sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+        run: sudo chmod +x /usr/local/bin/docker-compose
+
+      - name: Build Docker Compose
+        run: docker-compose -f docker-compose.test.yml build
+
+      - name: Run tests with Docker Compose
         run: docker-compose -f docker-compose.test.yml up --abort-on-container-exit
+
+      - name: Remove Docker containers
+        run: docker-compose -f docker-compose.test.yml down
