--- a/.github/workflows/producao.yml
+++ b/.github/workflows/producao.yml
@@ -1,13 +1,12 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy Node.js app to Azure Web App - api-organizepro
+name: Build and deploy Node.js app to Azure Web App - api-organize-pro
 
 on:
   push:
     branches:
       - main
-        
   workflow_dispatch:
 
 jobs:
@@ -26,7 +25,7 @@ jobs:
         run: |
           npm install
           npm run build --if-present
-#          npm run test --if-present
+ #         npm run test --if-present
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
@@ -66,7 +65,7 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'api-organizepro'
+          app-name: 'api-organize-pro'
           slot-name: 'production'
           package: .
           
